session_idはstringでやりとりしつつ適宜変換しなければならなかった……
