# APIserver/models/model_inline_object_3.go
@@ -2,5 +2,5 @@ package models
 
 type InlineObject3 struct {
 
-	SessionId string `json:"session_id,omitempty"`
+	SessionId string `json:"session_id"`
 }
