# APIserver/models/model_inline_object_4.go
@@ -1,6 +1,6 @@
 package models
 
-type InlineResponse200 struct {
+type InlineObject4 struct {
 
 	SessionId string `json:"session_id"`
 }
