# APIserver/models/model_inline_object_5.go
@@ -1,6 +1,6 @@
 package models
 
-type InlineResponse200 struct {
+type InlineObject5 struct {
 
 	SessionId string `json:"session_id"`
 }
