# APIserver/models/model_inline_object_6.go
@@ -1,6 +1,6 @@
 package models
 
-type InlineResponse200 struct {
+type InlineObject6 struct {
 
 	SessionId string `json:"session_id"`
 }
