# APIserver/models/model_inline_response_201.go
@@ -1,6 +1,6 @@
 package models
 
-type InlineResponse200 struct {
+type InlineResponse201 struct {
 
 	SessionId string `json:"session_id"`
 }
